# WebServer_ContentAdaptation

./: CMakeLists.txt  README.md  WebServerLOG.txt  a  a.out  adapt_image.c  adapt_image.h  basics.h  client.html  exe  exeall  http_management.h  http_request.c  http_request.h  http_response.c  img  instal  lock_fcntl.c  logServer.txt  logging.c  logging.h  page.html  q  server  server.c  server.h  serverLOG.txt  server_child.c  server_io.c  test  test.c  testServer.c  testing  testing.c  web_child.c
caching/: Cache.db  Connection-prova.c  CreateTable.c  a.out  caching.c  caching.h  count.c  delete.c  func_base.c  insert.c  manager_db.c  manager_db.h  older.c  unique.c
client/: ClientPage.html  main.c  startClient.html
http/: http_management.h  http_request.c  http_response.c
logging/: logging.c  logging.h
pages/: pageDefault.html  pageNotFound.html
services/: adapt_image.c  adapt_image.h  basics.h  device.c  file.txt  helper_io.c  lock_fcntl.c  server_io.h
storage/client/: ClientPage.html  a.out  client.c  client.h  endClient.html  main.c  start.html  startClient.html
